--- a/portfolio/home.html
+++ b/portfolio/home.html
@@ -9,10 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;0,700;1,400;1,600&display=swap" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://ryecorral.github.io/ImageBank/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://ryecorral.github.io/ImageBank/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://ryecorral.github.io/ImageBank/favicon-16x16.png">
-    <link rel="manifest" href="https://ryecorral.github.io/ImageBank/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://ryecode.github.io/ryecode/portfolio/ImageBank/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://ryecode.github.io/ryecode/portfolio/ImageBank/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://ryecode.github.io/ryecode/portfolio/ImageBank/favicon-16x16.png">
+    <link rel="manifest" href="https://ryecode.github.io/ryecode/portfolio/ImageBank/site.webmanifest">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     
 </head>
@@ -23,7 +23,7 @@
 <div >
   <nav class="top-nav fixed-top navbar-expand-lg bg-body-tertiary" >
       <div class="container-fluid" style="padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
-          <a href="https://ryecorral.github.io/portfolio/home"><img class="RyeLogo" src="https://ryecorral.github.io/ImageBank/RYELogo3.png" alt="RYE Logo" height="40px" width="40px">
+          <a href="https://ryecode.github.io/portfolio/home"><img class="RyeLogo" src="https://ryecode.github.io/ryecode/portfolio/ImageBank/RYELogoBLackSphere.png" alt="RYE Logo" height="40px" width="40px">
           </a>
         </div>
           <input id="menu-toggle" type="checkbox" />
@@ -33,19 +33,19 @@
           </label>
               <ul class="menu" >
                   <li class="nav-item neon-button1">
-                    <a class="nav-link " id="active" aria-current="page" href="https://ryecorral.github.io/portfolio/home">Home</a>
+                    <a class="nav-link " id="active" aria-current="page" href="https://ryecode.github.io/ryecode/portfolio/portfolio/home">Home</a>
                   </li>
                   <li class="nav-item neon-button1">
                     <a class="nav-link" href="#aboutMe">About</a>
                   </li>
                   <li class="nav-item neon-button1">
-                    <a class="nav-link" href="https://ryecorral.github.io/portfolio/blog">Blog</a>
+                    <a class="nav-link" href="https://ryecode.github.io/ryecode/portfolio/portfolio/blog">Blog</a>
                   </li>
                   <li class="nav-item neon-button1">
-                      <a class="nav-link" href="https://ryecorral.github.io/portfolio/projects">Projects</a>
+                      <a class="nav-link" href="https://ryecode.github.io/ryecode/portfolio/portfolio/projects">Projects</a>
                     </li>
                   <li class="nav-item neon-button1">
-                      <a class="nav-link" href="https://ryecorral.github.io/portfolio/contact">Let's Talk!</a>
+                      <a class="nav-link" href="https://ryecode.github.io/ryecode/portfolio/portfolio/contact">Let's Talk!</a>
                   </li>
               </ul>
   </nav>
@@ -54,7 +54,7 @@
 
                             <!-- HERO IMAGE -->
 <div class="hero-image">
-  <img class="hero-bg" id="bookmark" src="https://ryecorral.github.io/ImageBank/projectbg.jpg" alt="Hero BG">
+  <img class="hero-bg" id="bookmark" src="https://ryecode.github.io/ryecode/portfolio/ImageBank/heroBG.jpg" alt="Hero BG">
   <div class="hero-text">
       <h1 class="hero-title">
           <b>I'am Ryan Corral</b>
@@ -67,7 +67,7 @@
                                         <!-- CONTENT -->
 <div id="container">
     <div class="logoSpin" id="spinner" style="margin-top: 20px;" >
-        <img class="loading" src="https://ryecorral.github.io/ImageBank/RYELogo3.png" alt="RYELogo3">
+        <img class="loading" src="https://ryecode.github.io/ryecode/portfolio/ImageBank/RYELogoBLackSphere.png" alt="RYELogo3">
     </div>
 
 
@@ -76,7 +76,7 @@
       <div class="col-sm-6 mb-3 mb-sm-0" style="animation: crashLeft 3s ease-in calc(var(--typewriterSpeed) + 1.25s) forwards; animation-iteration-count: initial; text-align: center; transform: translateX(-110%);">
         <div class="card1" style="width: 100%;" >
           <div class="card" style="height: 380px;">
-            <img src="https://ryecorral.github.io/ImageBank/SubscribeBG.jpg" alt="" class="cardImage">
+            <img src="https://ryecode.github.io/ryecode/portfolio/ImageBank/SubscribeBG.jpg" alt="" class="cardImage">
             <div class="cardBody">
               <div class="welcome">
                 <h1><b>WELCOME!</b></h1>
@@ -93,29 +93,29 @@
         <div class="sub">
           <h1 style="margin-bottom: 10px;">
             <input type="email" class="form-control" id="labels" aria-describedby="emailHelp" placeholder="Enter Your Email Address" style="width: 60%;display:inline-block;margin: 0;">
-            <img class="btn" id="subscribe" src="https://ryecorral.github.io/ImageBank/Subscribe.png" alt="Subscribe"  width="35%" style="padding: 0;">
+            <img class="btn" id="subscribe" src="https://ryecode.github.io/ryecode/portfolio/ImageBank/Subscribe.png" alt="Subscribe"  width="35%" style="padding: 0;">
           </h1>
         </div>
 
         <div class="card" style="height: 300px; width: 100%;animation: crashRight 3s ease-in calc(var(--typewriterSpeed) + 1.75s) forwards; animation-iteration-count: initial;transform: translateX(110%);">
-          <img src="https://ryecorral.github.io/ImageBank/ProjectsBG.jpg" alt="" class="cardImage">
+          <img src="https://ryecode.github.io/ryecode/portfolio/ImageBank/ProjectsBG.jpg" alt="" class="cardImage">
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-bs-pause="click" >
               <div class="carousel-inner">
                 <h1 style="margin-top: 15px;margin-bottom: 0px;">-- Rye Skills --</h1>
                                 <div class="carousel-item active"  data-bs-interval="3000" style="width: 75%;">
-                  <img src="https://ryecorral.github.io/ImageBank/LogoGithub.png" class="d-block w-100" alt="..."  style="height: 200px;margin-left: 40px; margin-bottom: 30px">
+                  <img src="https://ryecode.github.io/ryecode/portfolio/ImageBank/LogoGithub.png" class="d-block w-100" alt="..."  style="height: 200px;margin-left: 40px; margin-bottom: 30px">
                 </div>
                 <div class="carousel-item" data-bs-interval="3000" style="width: 75%;">
-                  <img src="https://ryecorral.github.io/ImageBank/LogoBasket.png" class="d-block w-100" alt="..."  style="height: 200px; margin-left: 40px; margin-bottom: 30px">
+                  <img src="https://ryecode.github.io/ryecode/portfolio/ImageBank/LogoBasket.png" class="d-block w-100" alt="..."  style="height: 200px; margin-left: 40px; margin-bottom: 30px">
                 </div>
                 <div class="carousel-item"  data-bs-interval="3000" style="width: 75%;">
-                  <img src="https://ryecorral.github.io/ImageBank/LogoAuto.png" class="d-block w-100" alt="..."  style="height: 200px; margin-left: 40px; margin-bottom: 30px">
+                  <img src="https://ryecode.github.io/ryecode/portfolio/ImageBank/LogoAuto.png" class="d-block w-100" alt="..."  style="height: 200px; margin-left: 40px; margin-bottom: 30px">
                 </div>
                 <div class="carousel-item"  data-bs-interval="3000" style="width: 75%;">
-                  <img src="https://ryecorral.github.io/ImageBank/htmlCss.png" class="d-block w-100" alt="..."  style="height: 200px; margin-bottom: 30px;text-align: center;margin-left: 45px;">
+                  <img src="https://ryecode.github.io/ryecode/portfolio/ImageBank/htmlCss.png" class="d-block w-100" alt="..."  style="height: 200px; margin-bottom: 30px;text-align: center;margin-left: 45px;">
                 </div>
                 <div class="carousel-item"  data-bs-interval="3000" style="width: 75%;">
-                  <img src="https://ryecorral.github.io/ImageBank/javaScript.png" class="d-block w-100" alt="..."  style="height: 200px; margin-bottom: 30px;margin-left: 40px;">
+                  <img src="https://ryecode.github.io/ryecode/portfolio/ImageBank/javaScript.png" class="d-block w-100" alt="..."  style="height: 200px; margin-bottom: 30px;margin-left: 40px;">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
