July 19 updates mainly css

--- a/home.html
+++ b/home.html
@@ -33,19 +33,19 @@
           </label>
               <ul class="menu" >
                   <li class="nav-item neon-button1">
-                    <a class="nav-link " id="active" aria-current="page" href="https://ryecode.github.io/portfolio/portfolio/home">Home</a>
+                    <a class="nav-link " id="active" aria-current="page" href="https://ryecode.github.io/portfolio/home">Home</a>
                   </li>
                   <li class="nav-item neon-button1">
-                    <a class="nav-link" href="#aboutMe">About</a>
+                    <a class="nav-link" href="#aboutMe">Profile</a>
                   </li>
-                  <li class="nav-item neon-button1">
+                  <!-- <li class="nav-item neon-button1">
                     <a class="nav-link" href="https://ryecode.github.io/portfolio/portfolio/blog">Blog</a>
-                  </li>
+                  </li> -->
                   <li class="nav-item neon-button1">
                       <a class="nav-link" href="https://ryecode.github.io/portfolio/portfolio/projects">Projects</a>
                     </li>
                   <li class="nav-item neon-button1">
-                      <a class="nav-link" href="https://ryecode.github.io/portfolio/portfolio/contact">Let's Talk!</a>
+                      <a class="nav-link" href="https://ryecode.github.io/portfolio/portfolio/contact">Contact Me!</a>
                   </li>
               </ul>
   </nav>
@@ -75,21 +75,23 @@
     <div class="row" style="margin: 0px 5px 20px 5px;color: black;">
       <div class="col-sm-6 mb-3 mb-sm-0" style="animation: crashLeft 3s ease-in calc(var(--typewriterSpeed) + 1.25s) forwards; animation-iteration-count: initial; text-align: center; transform: translateX(-110%);">
         <div class="card1" style="width: 100%;" >
-          <div class="card" style="height: 380px;">
-            <img src="https://ryecode.github.io/portfolio/ImageBank/SubscribeBG.jpg" alt="" class="cardImage">
+          <div class="card" style="height: 320px;">
+            <img src="https://ryecode.github.io/portfolio/ImageBank/galaxyBG.png" alt="galaxy image" class="cardImage">
             <div class="cardBody">
               <div class="welcome">
                 <h1><b>WELCOME!</b></h1>
               </div>
-              <p class="cardText">Hi there! I'am Rye and this is my very own portfolio website. This is my little space for my personal universe to showcase my work, skills and achievements. I'll be posting things I experience and made along the new path that I took to become a full pledged Full-Stack Web Developer soon. It is my honor if you go and check out what I got here in my humble website. Enjoy surfing!</p>
-              <a href="#aboutMe" class="neon-button2 btn btn-primary" id="moreBtn">Know more about me</a>              
+              <p class="cardText">Hi there! I'am Rye and this is my portfolio website. A humble little space for my personal universe to showcase my creations, skills and achievements. I'll be posting things here that I experienced along the way in the new path that I took to become a full pledged Full-Stack Web Developer. It is my honor if you go check out what I got here. Enjoy surfing!</p>  
             </div>
           </div>
         </div>
-      </div>      
+              <div class="sub">        
+                <a href="#aboutMe" class="neon-button2 btn btn-primary" id="moreBtn">Know more about me</a>       
+              </div>
+      </div>  
+ 
 
       <div class="col-sm-6" style="height: 400px;">
-
         <div class="sub">
           <h1 style="margin-bottom: 10px;">
             <input type="email" class="form-control" id="labels" aria-describedby="emailHelp" placeholder="Enter Your Email Address" style="width: 60%;display:inline-block;margin: 0;">
@@ -97,7 +99,7 @@
           </h1>
         </div>
 
-        <div class="card" style="height: 300px; width: 100%;animation: crashRight 3s ease-in calc(var(--typewriterSpeed) + 1.75s) forwards; animation-iteration-count: initial;transform: translateX(110%);">
+        <div class="card" style="height: 300px; width: 100%;animation: crashRight 3s ease-in calc(var(--typewriterSpeed) + 1.75s) forwards; animation-iteration-count: initial;transform: translateX(120%);">
           <img src="https://ryecode.github.io/portfolio/ImageBank/ProjectsBG.jpg" alt="" class="cardImage">
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-bs-pause="click" >
               <div class="carousel-inner">
@@ -134,11 +136,12 @@
       <div class="about" id="aboutMe">
         <div>
           <h1 class="aboutTitle" style="margin-top: 20px;"> 
-            More About Me..  
+            More About Me...  
           </h1>
         </div>
-          <p><span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum quo laboriosam neque voluptatibus, animi, blanditiis hic dolorem in praesentium saepe accusamus deserunt vitae officiis tempora eius, aspernatur fugiat maiores expedita?</span><span>Asperiores voluptas placeat error dolores! Omnis aliquid, at eligendi nisi adipisci necessitatibus numquam incidunt recusandae minus architecto accusamus deserunt maiores? A odio accusantium quo voluptate ipsa quod deserunt est tempore?</span><span>Mollitia repudiandae ea, quibusdam labore ducimus quasi magnam dicta autem earum porro placeat, modi ad, delectus ipsam dolore enim natus architecto a ullam nesciunt. Perferendis quo molestiae voluptas assumenda ea.</span><span>Impedit voluptatibus fugiat, minima corrupti asperiores possimus, quasi provident mollitia labore reprehenderit voluptatum? Harum quos, magnam, pariatur eveniet placeat amet laudantium illum quam suscipit voluptatibus labore voluptas quod ducimus incidunt?</span><span>Ad dolor officia modi ea, suscipit fuga ipsum unde eveniet velit recusandae error voluptatum, non blanditiis, quae mollitia consequatur tempora sed nostrum facere voluptas! Laudantium nisi maiores omnis quae labore?</span></p>
-          <p><span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum quo laboriosam neque voluptatibus, animi, blanditiis hic dolorem in praesentium saepe accusamus deserunt vitae officiis tempora eius, aspernatur fugiat maiores expedita?</span><span>Asperiores voluptas placeat error dolores! Omnis aliquid, at eligendi nisi adipisci necessitatibus numquam incidunt recusandae minus architecto accusamus deserunt maiores? A odio accusantium quo voluptate ipsa quod deserunt est tempore?</span><span>Mollitia repudiandae ea, quibusdam labore ducimus quasi magnam dicta autem earum porro placeat, modi ad, delectus ipsam dolore enim natus architecto a ullam nesciunt. Perferendis quo molestiae voluptas assumenda ea.</span><span>Impedit voluptatibus fugiat, minima corrupti asperiores possimus, quasi provident mollitia labore reprehenderit voluptatum? Harum quos, magnam, pariatur eveniet placeat amet laudantium illum quam suscipit voluptatibus labore voluptas quod ducimus incidunt?</span><span>Ad dolor officia modi ea, suscipit fuga ipsum unde eveniet velit recusandae error voluptatum, non blanditiis, quae mollitia consequatur tempora sed nostrum facere voluptas! Laudantium nisi maiores omnis quae labore?</span></p>    <p><span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum quo laboriosam neque voluptatibus, animi, blanditiis hic dolorem in praesentium saepe accusamus deserunt vitae officiis tempora eius, aspernatur fugiat maiores expedita?</span><span>Asperiores voluptas placeat error dolores! Omnis aliquid, at eligendi nisi adipisci necessitatibus numquam incidunt recusandae minus architecto accusamus deserunt maiores? A odio accusantium quo voluptate ipsa quod deserunt est tempore?</span><span>Mollitia repudiandae ea, quibusdam labore ducimus quasi magnam dicta autem earum porro placeat, modi ad, delectus ipsam dolore enim natus architecto a ullam nesciunt. Perferendis quo molestiae voluptas assumenda ea.</span><span>Impedit voluptatibus fugiat, minima corrupti asperiores possimus, quasi provident mollitia labore reprehenderit voluptatum? Harum quos, magnam, pariatur eveniet placeat amet laudantium illum quam suscipit voluptatibus labore voluptas quod ducimus incidunt?</span><span>Ad dolor officia modi ea, suscipit fuga ipsum unde eveniet velit recusandae error voluptatum, non blanditiis, quae mollitia consequatur tempora sed nostrum facere voluptas! Laudantium nisi maiores omnis quae labore?</span></p>    <p><span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum quo laboriosam neque voluptatibus, animi, blanditiis hic dolorem in praesentium saepe accusamus deserunt vitae officiis tempora eius, aspernatur fugiat maiores expedita?</span><span>Asperiores voluptas placeat error dolores! Omnis aliquid, at eligendi nisi adipisci necessitatibus numquam incidunt recusandae minus architecto accusamus deserunt maiores? A odio accusantium quo voluptate ipsa quod deserunt est tempore?</span><span>Mollitia repudiandae ea, quibusdam labore ducimus quasi magnam dicta autem earum porro placeat, modi ad, delectus ipsam dolore enim natus architecto a ullam nesciunt. Perferendis quo molestiae voluptas assumenda ea.</span><span>Impedit voluptatibus fugiat, minima corrupti asperiores possimus, quasi provident mollitia labore reprehenderit voluptatum? Harum quos, magnam, pariatur eveniet placeat amet laudantium illum quam suscipit voluptatibus labore voluptas quod ducimus incidunt?</span><span>Ad dolor officia modi ea, suscipit fuga ipsum unde eveniet velit recusandae error voluptatum, non blanditiis, quae mollitia consequatur tempora sed nostrum facere voluptas! Laudantium nisi maiores omnis quae labore?</span></p>
+
+          <p style="color: black"><img id="ryePic" src="https://ryecode.github.io/portfolio/ImageBank/RyeFormal3.png"><span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum quo laboriosam neque voluptatibus, animi, blanditiis hic dolorem in praesentium saepe accusamus deserunt vitae officiis tempora eius, aspernatur fugiat maiores expedita?</span><span>Asperiores voluptas placeat error dolores! Omnis aliquid, at eligendi nisi adipisci necessitatibus numquam incidunt recusandae minus architecto accusamus deserunt maiores? A odio accusantium quo voluptate ipsa quod deserunt est tempore?</span><span>Mollitia repudiandae ea, quibusdam labore ducimus quasi magnam dicta autem earum porro placeat, modi ad, delectus ipsam dolore enim natus architecto a ullam nesciunt. Perferendis quo molestiae voluptas assumenda ea.</span><span>Impedit voluptatibus fugiat, minima corrupti asperiores possimus, quasi provident mollitia labore reprehenderit voluptatum? Harum quos, magnam, pariatur eveniet placeat amet laudantium illum quam suscipit voluptatibus labore voluptas quod ducimus incidunt?</span><span>Ad dolor officia modi ea, suscipit fuga ipsum unde eveniet velit recusandae error voluptatum, non blanditiis, quae mollitia consequatur tempora sed nostrum facere voluptas! Laudantium nisi maiores omnis quae labore?</span></p>
+          <p style="color: black"><span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum quo laboriosam neque voluptatibus, animi, blanditiis hic dolorem in praesentium saepe accusamus deserunt vitae officiis tempora eius, aspernatur fugiat maiores expedita?</span><span>Asperiores voluptas placeat error dolores! Omnis aliquid, at eligendi nisi adipisci necessitatibus numquam incidunt recusandae minus architecto accusamus deserunt maiores? A odio accusantium quo voluptate ipsa quod deserunt est tempore?</span><span>Mollitia repudiandae ea, quibusdam labore ducimus quasi magnam dicta autem earum porro placeat, modi ad, delectus ipsam dolore enim natus architecto a ullam nesciunt. Perferendis quo molestiae voluptas assumenda ea.</span><span>Impedit voluptatibus fugiat, minima corrupti asperiores possimus, quasi provident mollitia labore reprehenderit voluptatum? Harum quos, magnam, pariatur eveniet placeat amet laudantium illum quam suscipit voluptatibus labore voluptas quod ducimus incidunt?</span><span>Ad dolor officia modi ea, suscipit fuga ipsum unde eveniet velit recusandae error voluptatum, non blanditiis, quae mollitia consequatur tempora sed nostrum facere voluptas! Laudantium nisi maiores omnis quae labore?</span></p>
       </div>
 </div>
 
