--- a/home.html
+++ b/home.html
@@ -83,27 +83,28 @@
               </div>
               <p class="cardText">Hi there! I'am Rye and this is my portfolio website. A humble little space for my personal universe to showcase my creations, skills and achievements. I'll be posting things here that I experienced along the way in the new path that I took to become a full pledged Full-Stack Web Developer. It is my honor if you go check out what I got here. Enjoy surfing!</p>  
             </div>
-          </div>
-        </div>
               <div class="sub">        
                 <a href="#aboutMe" class="neon-button2 btn btn-primary" id="moreBtn">Know more about me</a>       
               </div>
+          </div>
+        </div>
       </div>  
  
-
       <div class="col-sm-6" style="height: 400px;">
-        <div class="sub">
+        <div class="sub">        
+          <a href="#aboutMe" class="neon-button2 btn btn-primary" id="moreBtn1">Check what I got!</a>       
+        </div>
+        <!-- <div class="sub">
           <h1 style="margin-bottom: 10px;">
             <input type="email" class="form-control" id="labels" aria-describedby="emailHelp" placeholder="Enter Your Email Address" style="width: 60%;display:inline-block;margin: 0;">
             <img class="btn" id="subscribe" src="https://ryecode.github.io/portfolio/ImageBank/Subscribe.png" alt="Subscribe"  width="35%" style="padding: 0;">
           </h1>
-        </div>
-
+        </div> -->
         <div class="card" style="height: 300px; width: 100%;animation: crashRight 3s ease-in calc(var(--typewriterSpeed) + 1.75s) forwards; animation-iteration-count: initial;transform: translateX(120%);">
           <img src="https://ryecode.github.io/portfolio/ImageBank/ProjectsBG.jpg" alt="" class="cardImage">
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-bs-pause="click" >
               <div class="carousel-inner">
-                <h1 style="margin-top: 15px;margin-bottom: 0px;">-- Rye Skills --</h1>
+                <!-- <h1 style="margin-top: 15px;margin-bottom: 0px;">-- Rye Skills --</h1> -->
                                 <div class="carousel-item active"  data-bs-interval="3000" style="width: 75%;">
                   <img src="https://ryecode.github.io/portfolio/ImageBank/LogoGithub.png" class="d-block w-100" alt="..."  style="height: 200px;margin-left: 40px; margin-bottom: 30px">
                 </div>
@@ -127,7 +128,8 @@
               <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
-              </button>              
+              </button>        
+   
           </div>
         </div>
       </div>
@@ -140,7 +142,7 @@
           </h1>
         </div>
 
-          <p style="color: black"><img id="ryePic" src="https://ryecode.github.io/portfolio/ImageBank/RyePicBlue.png"><span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum quo laboriosam neque voluptatibus, animi, blanditiis hic dolorem in praesentium saepe accusamus deserunt vitae officiis tempora eius, aspernatur fugiat maiores expedita?</span><span>Asperiores voluptas placeat error dolores! Omnis aliquid, at eligendi nisi adipisci necessitatibus numquam incidunt recusandae minus architecto accusamus deserunt maiores? A odio accusantium quo voluptate ipsa quod deserunt est tempore?</span><span>Mollitia repudiandae ea, quibusdam labore ducimus quasi magnam dicta autem earum porro placeat, modi ad, delectus ipsam dolore enim natus architecto a ullam nesciunt. Perferendis quo molestiae voluptas assumenda ea.</span><span>Impedit voluptatibus fugiat, minima corrupti asperiores possimus, quasi provident mollitia labore reprehenderit voluptatum? Harum quos, magnam, pariatur eveniet placeat amet laudantium illum quam suscipit voluptatibus labore voluptas quod ducimus incidunt?</span><span>Ad dolor officia modi ea, suscipit fuga ipsum unde eveniet velit recusandae error voluptatum, non blanditiis, quae mollitia consequatur tempora sed nostrum facere voluptas! Laudantium nisi maiores omnis quae labore?</span></p>
+          <p style="color: black"><img id="ryePic" src="https://ryecode.github.io/portfolio/ImageBank/RyePicTech.png"><span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum quo laboriosam neque voluptatibus, animi, blanditiis hic dolorem in praesentium saepe accusamus deserunt vitae officiis tempora eius, aspernatur fugiat maiores expedita?</span><span>Asperiores voluptas placeat error dolores! Omnis aliquid, at eligendi nisi adipisci necessitatibus numquam incidunt recusandae minus architecto accusamus deserunt maiores? A odio accusantium quo voluptate ipsa quod deserunt est tempore?</span><span>Mollitia repudiandae ea, quibusdam labore ducimus quasi magnam dicta autem earum porro placeat, modi ad, delectus ipsam dolore enim natus architecto a ullam nesciunt. Perferendis quo molestiae voluptas assumenda ea.</span><span>Impedit voluptatibus fugiat, minima corrupti asperiores possimus, quasi provident mollitia labore reprehenderit voluptatum? Harum quos, magnam, pariatur eveniet placeat amet laudantium illum quam suscipit voluptatibus labore voluptas quod ducimus incidunt?</span><span>Ad dolor officia modi ea, suscipit fuga ipsum unde eveniet velit recusandae error voluptatum, non blanditiis, quae mollitia consequatur tempora sed nostrum facere voluptas! Laudantium nisi maiores omnis quae labore?</span></p>
           <p style="color: black"><span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum quo laboriosam neque voluptatibus, animi, blanditiis hic dolorem in praesentium saepe accusamus deserunt vitae officiis tempora eius, aspernatur fugiat maiores expedita?</span><span>Asperiores voluptas placeat error dolores! Omnis aliquid, at eligendi nisi adipisci necessitatibus numquam incidunt recusandae minus architecto accusamus deserunt maiores? A odio accusantium quo voluptate ipsa quod deserunt est tempore?</span><span>Mollitia repudiandae ea, quibusdam labore ducimus quasi magnam dicta autem earum porro placeat, modi ad, delectus ipsam dolore enim natus architecto a ullam nesciunt. Perferendis quo molestiae voluptas assumenda ea.</span><span>Impedit voluptatibus fugiat, minima corrupti asperiores possimus, quasi provident mollitia labore reprehenderit voluptatum? Harum quos, magnam, pariatur eveniet placeat amet laudantium illum quam suscipit voluptatibus labore voluptas quod ducimus incidunt?</span><span>Ad dolor officia modi ea, suscipit fuga ipsum unde eveniet velit recusandae error voluptatum, non blanditiis, quae mollitia consequatur tempora sed nostrum facere voluptas! Laudantium nisi maiores omnis quae labore?</span></p>
       </div>
 </div>
