--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
 <body>
 <header>
 
-                                        <!-- NAVIGATION BAR -->
+                                        <!-- NAVIGATION BAR -->                                        
 <div >
   <nav class="top-nav fixed-top navbar-expand-lg bg-body-tertiary" >
       <div class="container-fluid" style="padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
@@ -38,21 +38,18 @@
                   <li class="nav-item neon-button1">
                     <a class="nav-link" href="#aboutMe">My Profile</a>
                   </li>
-                  <!-- <li class="nav-item neon-button1">
-                    <a class="nav-link" href="https://ryecode.github.io/portfolio/portfolio/blog">Blog</a>
-                  </li> -->
                   <li class="nav-item neon-button1">
-                      <a class="nav-link" href="https://ryecode.github.io/portfolio/portfolio/projects">My Projects</a>
+                      <a class="nav-link" href="https://ryecode.github.io/portfolio/projects">My Projects</a>
                     </li>
                   <li class="nav-item neon-button1">
-                      <a class="nav-link" href="https://ryecode.github.io/portfolio/portfolio/contact">Contact Me!</a>
+                      <a class="nav-link" href="#contactMe">Contact Me!</a>
                   </li>
               </ul>
   </nav>
 </div>
 </header>
 
-                            <!-- HERO IMAGE -->
+                                        <!-- HERO IMAGE -->  
 <div class="hero-image">
   <img class="hero-bg" id="bookmark" src="https://ryecode.github.io/portfolio/ImageBank/heroBG.jpg" alt="Hero BG">
   <div class="hero-text">
@@ -60,11 +57,18 @@
           <b>I'am Ryan Corral</b>
       </h1>
       <p class="subtitle ">And I'm a Full Stack Web Developer</p>
-    <button class="neon-button"> HIRE ME </button>
+      <button class="neon-button" >
+        <a style="text-decoration: none; 
+          text-shadow: none;
+          color: red;"
+          href="https://ryecode.github.io/portfolio/ImageBank/ryeResume.pdf" target="_blank"> HIRE ME </a> 
+      </button>
   </div>
 </div>
 
-                                        <!-- CONTENT -->
+                                        <!-- MAIN CONTENTS -->  
+
+                                        <!-- LANDING / CTA -->  
 <div id="container">
     <div class="logoSpin" id="spinner" style="margin-top: 20px;" >
         <img class="loading" src="https://ryecode.github.io/portfolio/ImageBank/RYELogoV2.png" alt="RYELogo3">
@@ -79,7 +83,7 @@
               <div class="welcome">
                 <h1><b>WELCOME!</b></h1>
               </div>
-              <p class="cardText">Hi there! I'am Rye and this is my portfolio website. A humble little space for my personal universe to showcase my creations, skills and achievements. I'll be posting things here that I experienced along the way in the new path that I took to become a full pledged Full-Stack Web Developer. It is my honor if you go check out what I got here. Enjoy surfing!</p>  
+              <p class="cardText" style="padding-left: 5px; padding-right: 5px;">Hi there! I'am Rye and please do check out this website of mine. A humble little space for my personal universe to showcase my creations, skills and achievements. As I share with you things that I experienced along the way, as I took the path to become a full pledged Full-Stack Web Developer. Enjoy!</p>  
             </div>
           </div>
         </div>
@@ -132,24 +136,53 @@
       </div>
     </div>
 
+                                        <!-- MY PROFILE -->  
       <div class="about cardAbout" id="aboutMe">
         <div>
           <h1 class="aboutTitle" style="margin-top: 10px;"> 
-            ABOUT RYE...  
+            MY PROFILE...  
           </h1>
         </div>
           <p style="color: black">
             <img id="ryePic" src="https://ryecode.github.io/portfolio/ImageBank/RyePicTech.png">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum quo laboriosam neque voluptatibus, animi, blanditiis hic dolorem in praesentium saepe accusamus deserunt vitae officiis tempora eius, aspernatur fugiat maiores expedita? Asperiores voluptas placeat error dolores! Omnis aliquid, at eligendi nisi adipisci necessitatibus numquam incidunt recusandae minus architecto accusamus deserunt maiores? A odio accusantium quo voluptate ipsa quod deserunt est tempore? Mollitia repudiandae ea, quibusdam labore ducimus quasi magnam dicta autem earum porro placeat, modi ad, delectus ipsam dolore enim natus architecto a ullam nesciunt. Perferendis quo molestiae voluptas assumenda ea. Impedit voluptatibus fugiat, minima corrupti asperiores possimus, quasi provident mollitia labore reprehenderit voluptatum? Harum quos, magnam, pariatur eveniet placeat amet laudantium illum quam suscipit voluptatibus labore voluptas quod ducimus incidunt? Ad dolor officia modi ea, suscipit fuga ipsum unde eveniet velit recusandae error voluptatum, non blanditiis, quae mollitia consequatur tempora sed nostrum facere voluptas! Laudantium nisi maiores omnis quae labore?
+            <h3>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum quo laboriosam neque voluptatibus, animi, blanditiis hic dolorem in praesentium saepe accusamus deserunt vitae officiis tempora eius, aspernatur fugiat maiores expedita? Asperiores voluptas placeat error dolores! Omnis aliquid, at eligendi placeat error dolores! Omnis aliquid, at eligendi placeat error dolores! Omnis aliquid, at eligendi  
+          </h3>
           </p>
           <p style="color: black; margin-top: 65px;">            
           <!-- ACCORDION -->
           <section>
             <div class="accordion accordion-flush" id="accordionFlushExample" style="color: black; width: 100px; display: inline; position: relative; z-index: 1;">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingTwo">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo" style="color: black;">
+                    <b>PROGRAMMING SKILLS</b>
+                  </button>
+                </h2>
+                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample" >
+                  <div class="accordion-body" > 
+                    <p style="margin-left: 10px;">Hint: Hover/Tap over the skills for a TREAT!</p>
+                    <div class="tilt-box-wrap" style="width: 60%;text-align: center; margin-left: 15%;">
+                      <span class="t_over"></span>
+                      <span class="t_over"></span>
+                      <span class="t_over"></span>
+                      <span class="t_over"></span>
+                      <span class="t_over"></span>
+                      <span class="t_over"></span>
+                      <span class="t_over"></span>
+                      <span class="t_over"></span>
+                      <span class="t_over"></span>
+                      <div class="tilt-box">
+                          <img style="width: 90%;" src="https://ryecode.github.io/portfolio/ImageBank/codingSkills.jpeg"></img>
+                      </div>
+                  </div>
+                  </div>
+                </div>
+              </div>
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingOne" >
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne" style="color: black;">
-                      EDUCATIONAL ATTAINMENT
+                      <b>EDUCATIONAL ATTAINMENT</b>
                     </button>
                   </h2>
                   <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample" style="color: black;">
@@ -186,7 +219,7 @@
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingFour">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour" style="color: black;">
-                      WORK EXPERIENCE
+                      <b>WORK EXPERIENCE</b>
                     </button>
                   </h2>
                   <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
@@ -202,7 +235,7 @@
                                 <br>AT&T Uverse Fiber Internet Technical Support Representative 
                                 <br>(March 2020 - November 2020)
                                 </p>                                
-                            <b>■ OWNER/MANAGER </b>
+                            <b>■ MANAGER </b>
                                   <p>
                                       PCSO Accredited Lotto and Keno Outlet
                                   <br>(2009-2020)
@@ -212,18 +245,9 @@
                 </div>
               </div>
                 <div class="accordion-item">
-                  <h2 class="accordion-header" id="flush-headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo" style="color: black;">
-                      PROGRAMMING SKILLS
-                    </button>
-                  </h2>
-                  <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample" >
-                    <div class="accordion-body" style="margin-left: 20px;"> <img class="cardContainer" src="https://ryecode.github.io/portfolio/ImageBank/codingSkills.jpeg"> </div>
-                </div>
-                <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingThree">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree" style="color: black;">
-                      CERTIFICATES
+                      <b>MY CERTIFICATES</b>
                     </button>
                   </h2>
                   <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
@@ -253,6 +277,48 @@
           </section>              
           </p>
       </div>
+      
+                                        <!-- MY PROJECTS  -->  
+
+
+
+                                                                                <!-- CONTACT ME-->  
+<div class="about cardAbout" id="contactMe">
+  <div>
+    <h1 class="aboutTitle" style="margin-top: 10px;"> 
+      CONTACT ME...  
+    </h1>
+  </div>
+  <div class="row" style="margin: 10px 5px 10px 5px;color: aliceblue;">
+    <div class="col-sm-6 mb-3 mb-sm-0" style="animation: crashLeft 3s ease-in calc(var(--typewriterSpeed) + 1s) forwards; animation-iteration-count: initial; text-align: center; transform: translateX(-110%);">
+      <div class="tilt-box-wrap">
+        <span class="t_over"></span>
+        <span class="t_over"></span>
+        <span class="t_over"></span>
+        <span class="t_over"></span>
+        <span class="t_over"></span>
+        <span class="t_over"></span>
+        <span class="t_over"></span>
+        <span class="t_over"></span>
+        <span class="t_over"></span>
+        <div class="tilt-box">
+            <img src="https://ryecode.github.io/portfolio/ImageBank/resumeSS.jpeg" width="80%" height="100%"></img>
+        </div>
+    </div>
+          <p style="animation: crashLeft 3s ease-in calc(var(--typewriterSpeed) + 2s) forwards; animation-iteration-count: initial; text-align: center; transform: translateX(-110%); color: black; margin-top: 10px;">Download the PDF file <a href="https://ryecode.github.io/portfolio/ImageBank/ryeResume.pdf" target="_blank">here</a>.</p>
+    </div>  
+  
+    <div class="col-sm-6" style="height: 400px;">
+      <div class="card" style="height: 400px; width: 100%;animation: crashRight 3s ease-in calc(var(--typewriterSpeed) + 1.1s)    forwards; animation-iteration-count: initial;transform: translateX(120%);">
+        <img src="https://ryecode.github.io/portfolio/ImageBank/ProjectsBG.jpg" alt="" class="cardImage">
+
+      </div>
+    </div>
+  </div>
+  
+</div>
+
+
 </div>
 
                                         <!-- FOOTER -->
