--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@
         <a style="text-decoration: none; 
           text-shadow: none;
           color: red;"
-          href="https://ryecode.github.io/portfolio/ImageBank/ryeResume.pdf" target="_blank"> HIRE ME </a> 
+          href="https://ryecode.github.io/portfolio/ImageBank/RyanCorral_Resume.pdf" target="_blank"> HIRE ME </a> 
       </button>
   </div>
 </div>
@@ -75,7 +75,7 @@
                                         <!-- LANDING / CTA -->  
 <div id="container">
     <div class="logoSpin" id="spinner" style="margin-top: 20px;" >
-        <img class="loading" src="https://ryecode.github.io/portfolio/ImageBank/RYELogoBLackSphere.png" alt="RYELogo3">
+        <img class="loading" src="https://ryecode.github.io/portfolio/ImageBank/RYELogoV2.png" alt="RYELogo3">
     </div>
 
     <div class="row" style="margin: 0px 5px 30px 5px;color: black;">
@@ -92,7 +92,15 @@
                 <h1><b>WELCOME!</b></h1>
               </div>
               <p class="cardText" style="padding-left: 5px; padding-right: 5px;">
+                <span style="font-size: x-small; 
+                             color: rgba(240, 248, 255, 0.749); 
+                             margin-top: 5px;
+                             text-shadow: black;">
+                             Tap on the box to read better!
+                </span>
+                <br>
                 Hi there! I'am Rye and please do check out this website of mine. A humble little space for my personal universe to showcase my creations, skills and achievements. As I share with you things that I experienced along the way, as I took the path to become a full pledged Full-Stack Web Developer. Enjoy!
+                                               
               </p>  
             </div>
           </div>
@@ -109,12 +117,6 @@
             Check out my Projects here!
           </a>       
         </div>
-        <!-- <div class="sub">
-          <h1 style="margin-bottom: 10px;">
-            <input type="email" class="form-control" id="labels" aria-describedby="emailHelp" placeholder="Enter Your Email Address" style="width: 60%;display:inline-block;margin: 0;">
-            <img class="btn" id="subscribe" src="https://ryecode.github.io/portfolio/ImageBank/Subscribe.png" alt="Subscribe"  width="35%" style="padding: 0;">
-          </h1>
-        </div> -->
         <div class="card" 
             style="height: 300px; 
                     width: 100%;
@@ -180,7 +182,7 @@
     </div>
 
                                         <!-- MY PROFILE -->  
-      <div class="card" 
+      <div class="cardProfile card" 
            id="aboutMe"
            style="position: relative;     
            margin: 25px 0px 20px 0px;
@@ -192,7 +194,7 @@
            background-attachment: fixed;
            text-align: center;
            box-shadow: 0 0 0.5em 0 hsl(45, 100%, 53%);">
-        <div >
+        <div>
           <h1 class="profileTitle"> 
             MY PROFILE...  
           </h1>        
@@ -241,7 +243,7 @@
                      aria-labelledby="flush-headingTwo" 
                      data-bs-parent="#accordionFlushExample" >
                   <div class="accordion-body" > 
-                    <p style="margin-left: 10px;"><b>Hint: Hover or Tap over the skills for a TREAT!</b></p>
+                    <p style="margin-left: 10px;"><b>Hint: Hover or Tap over the blue box for a TREAT!</b></p>
                     <div class="tilt-box-wrap" style="width: 60%;text-align: center; margin-left: 15%;">
                       <span class="t_over"></span>
                       <span class="t_over"></span>
@@ -391,14 +393,16 @@
 
 
 
-                                                                                <!-- CONTACT ME-->  
-<div class="about cardAbout" id="contactMe">
+                                        <!-- CONTACT ME-->  
+<div class="card about" id="contactMe">
   <div>
-    <h1 class="aboutTitle" style="margin-top: 10px;"> 
-      CONTACT ME...  
+    <h1 class="aboutTitle" 
+        style="margin-top: 10px;"> 
+      CONTACT ME..  
     </h1>
   </div>
-  <div class="row" style="margin: 10px 5px 10px 5px;color: aliceblue;">
+  <p style="color: aliceblue;">Hover or Tap on the cards!</p>
+  <div class="row" style="margin: 10px 5px 10px -25px;color: aliceblue;">
     <div class="col-sm-6 mb-3 mb-sm-0" 
          style="animation: crashLeft 3s ease-in calc(var(--typewriterSpeed) + 1s) forwards; 
                 animation-iteration-count: initial; 
@@ -415,32 +419,48 @@
         <span class="t_over"></span>
         <span class="t_over"></span>
         <span class="t_over"></span>
-        <div class="tilt-box">
+          <div class="tilt-box">
             <img src="https://ryecode.github.io/portfolio/ImageBank/resumeSS.jpeg" width="80%" height="100%"></img>
-        </div>
-    </div>
+          </div>
+      </div>
           <p style="animation: crashLeft 3s ease-in calc(var(--typewriterSpeed) + 2s) forwards; 
                     animation-iteration-count: initial; 
                     text-align: center; 
                     transform: translateX(-110%); 
-                    color: black; 
+                    color: aliceblue; 
                     margin-top: 10px;
                     z-index: 1;">
                       Download the PDF file <a href="https://ryecode.github.io/portfolio/ImageBank/ryeResume.pdf" target="_blank">here</a>.
           </p>
-    </div>  
-  
-    <div class="col-sm-6" style="height: 400px;">
-      <div class="card" 
-           style="height: 400px; 
-                  width: 100%;animation: 
-                  crashRight 3s ease-in calc(var(--typewriterSpeed) + 1.1s) forwards; 
-                  animation-iteration-count: initial;
-                  transform: translateX(120%);
-                  z-index: 1;">
-        <img src="https://ryecode.github.io/portfolio/ImageBank/ProjectsBG.jpg" alt="" class="cardImage">
+    </div>    
+      <div class="col-sm-6" style="height: 400px;">
+        <div class="card" 
+             id="contactCardQuery"
+             style="height: 350px; 
+                    width: 100%;animation: 
+                    crashRight 3s ease-in calc(var(--typewriterSpeed) + 1.1s) forwards; 
+                    animation-iteration-count: initial;
+                    transform: translateX(120%);
+                    z-index: 1;
+                    opacity: 1;
+                    margin-top: 0px;">                  
+          <img class="cardImage" src="https://ryecode.github.io/portfolio/ImageBank/blueCarbonBG.jpg" alt="" class="cardImage">  
+          <p>
+            <img id="cardQuery" src="https://ryecode.github.io/portfolio/ImageBank/contactDetailsV2.png"
+                 style="text-align: center;
+                 margin-top: 35px;
+                        width: 80%;
+                        z-index: 1;
+                        opacity: 1;">
+          </p>
+        </div>
+        <div class="sub">
+          <h1 style="margin-bottom: 10px;">
+            <input type="email" class="form-control" id="labels" aria-describedby="emailHelp" placeholder="Enter Your Email Address" style="width: 60%;display:inline-block;margin: 0;">
+            <img class="btn" id="subscribe" src="https://ryecode.github.io/portfolio/ImageBank/Subscribe.png" alt="Subscribe"  width="30%" style="padding: 0;">
+          </h1>
+        </div>
       </div>
-    </div>
   </div>
   
 </div>
