--- a/home.html
+++ b/home.html
@@ -37,13 +37,13 @@
           </label>
               <ul class="menu" >
                   <li class="nav-item neon-button1">
-                    <a class="nav-link " id="active" aria-current="page" href="https://ryecode.github.io/portfolio/home">Home</a>
+                    <a class="nav-link " aria-current="page" href="#bookmark">Home</a>
                   </li>
                   <li class="nav-item neon-button1">
                     <a class="nav-link" href="#aboutMe">My Profile</a>
                   </li>
                   <li class="nav-item neon-button1">
-                      <a class="nav-link" href="https://ryecode.github.io/portfolio/projects">My Projects</a>
+                      <a class="nav-link" href="#myProjects">My Projects</a>
                     </li>
                   <li class="nav-item neon-button1">
                       <a class="nav-link" href="#contactMe">Contact Me!</a>
@@ -116,7 +116,7 @@
            style="height: 400px;
                   margin-top: 10px;">
         <div class="sub">        
-          <a href="https://ryecode.github.io/portfolio/portfolio/projects" 
+          <a href="#myProjects"
             class="neon-button2 btn btn-primary" id="moreBtn1">
             Check out my Projects here!
           </a>       
@@ -460,7 +460,61 @@
       </div>
       
                                         <!-- MY PROJECTS  -->  
-
+<div class="cardProfile about" id="myProjects">
+<div>
+  <h1 class="aboutTitle" 
+      style="margin-top: 10px;"> 
+    MY PROJECTS..  
+  </h1>
+  <p style="color: aliceblue;">Hover or Tap on the cards for more information</p>
+</div>
+  <div class="row row-cols-1 row-cols-md-4 g-4">
+    <div class="col">
+      <div class="cards">
+        <img class="card-image" src="https://ryecode.github.io/portfolio/ImageBank/RyePortfolioSS.jpeg">
+        <div class="hover-container">
+            <p class="hover-header">Rye Portfolio</p>
+            <a class="hover-btn" href="https://ryecode.github.io/portfolio/home" target="_blank">Visit</a>
+            <p class="hover-description">This is my first mini-project during our KodeGo bootcamp. I built the website purely with HTML, Bootstrap v5.3 and CSS</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="cards">
+        <img class="card-image" src="https://ryecode.github.io/portfolio/ImageBank/EtiketSS.jpeg">
+        <div class="hover-container">
+            <p class="hover-header">Etiket.com</p>
+            <a class="hover-btn" href="https://etiket-com-mu.vercel.app/" target="_blank">Visit</a>
+            <p class="hover-description">This is our collaboration capstone project of Team IceCode during KodeGo bootcamp. It was built using React, Node, Express, MongoDB, Mongoose, some Bootstrap v5.3 and React Bootstrap v2.9.0 and old school CSS. It was deployed using Vercel. <br> 
+              <br>For this project, I created the whole backend, plus database implementation.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="cards">
+        <img class="card-image" src="https://ryecode.github.io/portfolio/ImageBank/RyeTicTacToeSS.jpeg">
+        <div class="hover-container">
+            <p class="hover-header">Rye TicTacToe Game</p>
+            <a class="hover-btn" href="https://ryetictactoe.vercel.app/" target="_blank">Visit</a>
+            <p class="hover-description">This is actually a mini game website I created for my KodeGo Technical exam. The website was built purely with React. Then it was deployed using Vercel.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="cards"
+           style="background-color: black;">
+        <img class="card-image" 
+             src="https://ryecode.github.io/portfolio/ImageBank/RYELogoV2.png"
+             style="width: 40%;">
+        <div class="hover-container">
+            <p class="hover-header">Rye cvhacker.com</p>
+            <a class="hover-btn" href="https://ryetictactoe.vercel.app/" target="_blank">Visit</a>
+            <p class="hover-description">Currently under rebuilding status!!</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 
                                         <!-- CONTACT ME-->  
