--- a/home.html
+++ b/home.html
@@ -86,7 +86,7 @@
                 text-align: center; 
                 transform: translateX(-110%);">
         <div class="card1" style="width: 100%;" >
-          <div class="card" style="height: 350px;">
+          <div class="card" style="height: 300px;">
             <img src="https://ryecode.github.io/portfolio/ImageBank/galaxyBG.png" alt="galaxy image" class="cardImage">
             <div class="cardBody">
               <div class="welcome">
@@ -100,13 +100,14 @@
                              Tap on the box to read better!
                 </span>
                 <br>
-                Hi there! I'am Rye and please do check out this website of mine. A humble little space for my personal universe to showcase my creations, skills and achievements. As I share with you things that I experienced along the way, as I took the path to become a full pledged Full-Stack Web Developer. Enjoy!
-                                               
+                Hi there! I'am Rye and please do check out this website of mine. A humble little space for my personal universe to showcase my creations, skills and achievements. As I share with you things that I experienced along the way, as I took the path to become a full pledged Full-Stack Web Developer. Enjoy!                                               
               </p>  
             </div>
-            <div class="sub">        
-              <a href="#aboutMe" class="neon-button2 btn btn-primary" id="moreBtn">Know more about me</a>       
-            </div>
+          </div>
+          <div class="sub">        
+            <a href="#aboutMe" class="neon-button2 btn btn-primary" id="moreBtn">
+              Know more about me
+            </a>       
           </div>
         </div>
 
@@ -496,7 +497,7 @@
         <div class="hover-container">
             <p class="hover-header">Rye TicTacToe Game</p>
             <a class="hover-btn" href="https://ryetictactoe.vercel.app/" target="_blank">Visit</a>
-            <p class="hover-description">This is actually a mini game website I created for my KodeGo Technical exam. The website was built purely with React. Then it was deployed using Vercel.</p>
+            <p class="hover-description">This is actually a mini game website I created for my KodeGo Technical exam. The website was built purely with React and JavaScript. Then it was deployed using Vercel.</p>
         </div>
       </div>
     </div>
@@ -509,7 +510,7 @@
         <div class="hover-container">
             <p class="hover-header">Rye cvhacker.com</p>
             <a class="hover-btn" href="https://ryetictactoe.vercel.app/" target="_blank">Visit</a>
-            <p class="hover-description">Currently under rebuilding status!!</p>
+            <p class="hover-description">I'm currently reconstructing and migrating this website to REACT</p>
         </div>
       </div>
     </div>
