Fixed Media Query Issues

--- a/home.html
+++ b/home.html
@@ -290,8 +290,8 @@
           </h1>        
         <h3 style="color: black;">
             <img id="ryePic" src="https://ryecode.github.io/portfolio/ImageBank/RyePicTech.png">
-          <p 
-            style=" margin-left: 20px ;
+          <p class="aboutMe"
+            style=" margin-left: 70px ;
             margin-right: 20px;
             font-weight: 900;
             color: black;
@@ -299,7 +299,7 @@
             0 0 0.5em hsl(45, 100%, 53%),
             0 0 2em hsl(45, 100%, 53%);
             opacity: 1;
-            width: 90%;">
+            width: 85%;">
                 Greetings I'am Ryan Corral, a former call-center agent, now turned to a Full-Stack Web Developer after recently graduating from KodeGo Full-Stack Web Development Bootcamp.  
               <br><br>
               Even since high school, I noticed that I can pick-up technology very quickly and I'm very comfortable jumping into different platforms and various code bases. The very first program I coded was using Turbo Pascal (from Jurassic period haha!). Back then, learning to code using only google to search forums and tutorials was very tiring for many, but for me it was so much fun, and fullfilling!
