Fixed Media Query Issues

--- a/home.html
+++ b/home.html
@@ -118,7 +118,7 @@
                              Tap on the box to read better!
                 </span>
                 <br>
-                Please do check out this website of mine. A humble little space for my personal universe to showcase my creations, skills and achievements. As I share with you things that I experienced along the way, and take the path to become a full pledged Full-Stack Web Developer. Enjoy!                                   
+                Please do check out this website of mine. A humble little space for my personal universe to showcase my creations, skills and achievements. And share with you things that I experienced along the way, as I walk the path to become a full pledged Full-Stack Web Developer. Enjoy!                                   
               </p>  
             </div>
           </div>
